# ChangeLog for dev-util/android-sdk-update-manager
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/android-sdk-update-manager/ChangeLog,v 1.36 2012/06/07 20:49:07 zmedico Exp $

  07 Jun 2012; Zac Medico <zmedico@gentoo.org>
  android-sdk-update-manager-16.ebuild, android-sdk-update-manager-17.ebuild:
  inherit user for enewgroup

  23 Apr 2012; Jeroen Roovers <jer@gentoo.org> metadata.xml:
  Empty tag.

  24 Mar 2012; Richard Freeman <rich0@gentoo.org>
  -android-sdk-update-manager-13.ebuild, -android-sdk-update-manager-14.ebuild,
  -android-sdk-update-manager-15.ebuild:
  Clean up old versions.

*android-sdk-update-manager-17 (24 Mar 2012)

  24 Mar 2012; Richard Freeman <rich0@gentoo.org>
  +android-sdk-update-manager-17.ebuild:
  bump - 409249

*android-sdk-update-manager-16 (26 Dec 2011)

  26 Dec 2011; Richard Freeman <rich0@gentoo.org>
  +android-sdk-update-manager-16.ebuild:
  bump - 395921

*android-sdk-update-manager-15 (29 Nov 2011)

  29 Nov 2011; Richard Freeman <rich0@gentoo.org>
  +android-sdk-update-manager-15.ebuild:
  Version bump and add Tony Murray's SWT patch.

  29 Nov 2011; Richard Freeman <rich0@gentoo.org>
  -android-sdk-update-manager-10.ebuild,
  -android-sdk-update-manager-10-r1.ebuild,
  -android-sdk-update-manager-12.ebuild:
  Clean up old versions

  02 Nov 2011; Mike Frysinger <vapier@gentoo.org>
  android-sdk-update-manager-10.ebuild,
  android-sdk-update-manager-10-r1.ebuild,
  android-sdk-update-manager-12.ebuild, android-sdk-update-manager-13.ebuild,
  android-sdk-update-manager-14.ebuild:
  Drop "die" from enew{user,group} since these have always taken care of
  calling it when necessary.

*android-sdk-update-manager-14 (19 Oct 2011)

  19 Oct 2011; Richard Freeman <rich0@gentoo.org>
  +android-sdk-update-manager-14.ebuild:
  bump for ice cream

*android-sdk-update-manager-13 (30 Sep 2011)

  30 Sep 2011; Richard Freeman <rich0@gentoo.org>